@@ -1,5 +1,13 @@
 2013-03-02  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Redo r144538 (after r144530).
+
+        * WebCoreSupport/WebFrameNetworkingContext.cpp:
+        * WebCoreSupport/WebFrameNetworkingContext.h:
+        * WebCoreSupport/WebPlatformStrategies.cpp:
+
+2013-03-02  Ryosuke Niwa  <rniwa@webkit.org>
+
         Yet another build fix attempt after r144530.
 
         * WebCoreSupport/WebFrameNetworkingContext.cpp:
